orthanc/orthanc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-db
  namespace: orthanc
  labels:
    app: orthanc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc-db
  template:
    metadata:
      labels:
        app: orthanc-db
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: orthanc-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-db
  namespace: orthanc
spec:
  selector:
    app: orthanc-db
  ports:
  - port: 5432
    targetPort: 5432
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-auth-service
  namespace: orthanc
  labels:
    app: orthanc-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc-auth-service
  template:
    metadata:
      labels:
        app: orthanc-auth-service
    spec:
      containers:
      - name: auth-service
        image: orthancteam/orthanc-auth-service:main
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: permissions
          mountPath: /orthanc_auth_service/permissions.json
          subPath: permissions.json
      volumes:
      - name: permissions
        configMap:
          name: orthanc-config
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-auth-service
  namespace: orthanc
spec:
  selector:
    app: orthanc-auth-service
  ports:
  - port: 8000
    targetPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc
  namespace: orthanc
  labels:
    app: orthanc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      containers:
      - name: orthanc
        image: harbor.eucaim.cancerimage.eu/library/orthanc/orthanc:26.1.0
        ports:
        - containerPort: 8042
          name: http-web
        - containerPort: 4242
          name: dicom
        volumeMounts:
        - name: storage
          mountPath: /var/lib/orthanc
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: orthanc-storage
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-service
  namespace: orthanc
spec:
  selector:
    app: orthanc
  ports:
  - name: web-ui
    port: 80
    targetPort: 8042
  - name: dicom-port
    port: 4242
    targetPort: 4242
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohif
  namespace: orthanc
  labels:
    app: ohif
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ohif
  template:
    metadata:
      labels:
        app: ohif
    spec:
      containers:
      - name: ohif
        image: orthancteam/ohif-v3:25.12.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: storage
          mountPath: /var/lib/orthanc/db
          subPath: db
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: orthanc-storage
---
apiVersion: v1
kind: Service
metadata:
  name: ohif-service
  namespace: orthanc
spec:
  selector:
    app: ohif
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-wrapper
  namespace: orthanc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc-wrapper
  template:
    metadata:
      labels:
        app: orthanc-wrapper
    spec:
      containers:
        - name: orthanc-wrapper
          image: harbor.eucaim.cancerimage.eu/library/orthanc/node:22.16.0
          command:
            - /node_data/init_node.sh
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: orthanc-wrapper
              mountPath: /node_data
      volumes:
        - name: orthanc-wrapper
          persistentVolumeClaim:
            claimName: orthanc-wrapper-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-wrapper-service
  namespace: orthanc
spec:
  selector:
    app: orthanc-wrapper
  ports:
  - port: 8080
    targetPort: 8080
