orthanc/orthanc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orthanc-add-ingress
  namespace: orthanc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: breastscan-node.imaging.i3m.upv.es
    http:
      paths:
      - path: /ohif
        pathType: ImplementationSpecific
        backend:
          service:
            name: orthanc-service
            port:
              number: 8042
      - path: /dicom-web
        pathType: ImplementationSpecific
        backend:
          service:
            name: orthanc-service
            port:
              number: 8042
